<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="Acquisition_Control_Scanner" Id="{516087e4-117b-4592-ae40-eb93ed7026eb}">
    <Declaration><![CDATA[TYPE Acquisition_Control_Scanner :
STRUCT
	Trigger_Enable : BOOL;
	Trigger		   : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>