<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="OUTPUT" Id="{c8fd23d5-df62-48c3-b908-ac3e6028ecf1}">
    <Declaration><![CDATA[TYPE OUTPUT :
STRUCT
	Trigger_Enable: BOOL;
	Trigger:BOOL;
	
	Result_acknowledge:BOOL;
	Error:BOOL;
	no_read:BOOL;
	Result_data: T_MaxString;
	Done:BOOL;
	Result_ID:INT;
	Result_len:INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>